[package]
name = "derive-elves"
authors = ["Michael van Straten"]
version = "0.1.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/derive-elves/"
readme = "readme.md"
repository = "https://github.com/michaelvanstraten/derive-elves"
description = "Writing inclusive derive macros is tedious, this creates provides helper functions that make it easier."
keywords = ["macros"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1.0.10"
proc-macro2 = "1.0.51"

[dependencies.syn]
version = "2.0.8"
features = ["full"]
